Change status code for not found record to 404
Auditors: akri, mib, jbr, hwha
